removing multiple prompts in an attempt to avoid redundancies and confusion in init function

--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="dist/style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>Team Profile</title>
 </head>
 <body>
 
-    <div class="mainBanner">
-        <div class="container">
+    <div class="mainBanner text-center">
+        <div class="container-fluid">
             <h1>Meet This Team!</h1>
         </div>
     </div>
@@ -25,6 +26,6 @@
             </div>
         </div>
     </div>
-    
+
 </body>
 </html>
