attempted to write init function for question prompts

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 
     <div class="mainBanner text-center">
         <div class="container-fluid">
-            <h1>Meet This Team!</h1>
+            <h1>Meet The Team!</h1>
         </div>
     </div>
     <div class="container text-center">
