export default does not work, switched to module.exports instead

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./dist/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="./dist/style.css">
     <title>Team Profile</title>
 </head>
 <body>
@@ -20,10 +20,10 @@
     <div class="container text-center">
         <div class="row col-md-4">
             <div class="card">
-                <div class="cardHead">Name:</div>
-                <div class="cardBody">Role:</div>
-                <div class="cardBody">ID:</div>
-                <div class="cardBody">Email:</div>
+                <h2 class="cardHead">Name:</h2>
+                <h3 class="cardBody">Role:</h3>
+                <p class="cardBody">ID:</p>
+                <p class="cardBody">Email:</p>
             </div>
         </div>
     </div>
